Fix: card alignment on mobile view, and css type causing error in css

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -34,7 +34,7 @@ a {
 
 /* ----------Structure---------- */
 .project-card {
-    max-width: 50%%;
+    max-width: 380px;
 }
 
 
